# OliveM_Viewer

./: BUILD_MSVC2022.md  CMakeLists.txt  COMPLETE_FIX_GUIDE.md  COMPLETE_UPDATES.md  CORRECTIONS_SUMMARY.md  CPPCLI_MIGRATION_GUIDE.md  ColorLegend.qml  GDAL Dependencies.txt  GeoTiff3DView.qml  GeoTiffImagePanel.qml  Histogram.qml  INSTALL.md  INTEGRATION_PLAN.md  ImageViewerContent.qml  LICENSE  MODIFICATIONS_SUMMARY.md  OliveGeoTiffViewer.code-workspace  OliveGeoTiffViewer.pro  OliveMatrixLib.h  OliveMatrixLib_example.cpp  QT6_MIGRATION.md  QUICKSTART.md  README.md  ResultImageViewer.qml  STRUCTURE.md  TROUBLESHOOTING_IMAGES.md  build_linux.sh  build_msvc2022.bat  build_windows.bat  coreclr_delegates.h  geotiffprocessor.cpp  geotiffprocessor.h  geotiffprocessor_original.cpp  hostfxr.h  main.cpp  main.qml  nethost.h  nethost_loader.cpp  nethost_loader.h  qml.qrc  (+1 more)
OliveMatrixBridge/: OliveMatrixBridge.cpp  OliveMatrixBridge.h  OliveMatrixBridge.sln  OliveMatrixBridge.vcxproj
OliveMatrixLibCore/: Readme.txt
OliveMatrixLibCore/Release/net6.0/: OliveMatrixLibCore.deps.json
OliveMatrixWrapper/: BUILD.md  NativeInterop.cs  OliveMatrixWrapper.csproj
workflows/: claude.yml
